# artjuna-monorepo

./: .gitignore  README.md  client-cert.pem  client-key.pem
api/: .env-example  README.md  app.js  app.py  package-lock.json  package.json  pyproject.toml  style_transfer_core.py
api/cert/: server-ca.pem
api/config/: db.js
api/controller/: AccountController.js  FollowController.js  LikeController.js  OrderController.js  PostController.js  ProductController.js
api/ml_api/: api_core.py  app_reload.py  recommender_core.py  style_transfer_api.py  style_transfer_core.py
api/model/: AccountModel.js  FollowModel.js  OrderModel.js  PostModel.js  ProductModel.js  ProductSeenModel.js  index.js
api/routes/: AccountRoute.js  FollowRoute.js  LikeRoute.js  OrderRoute.js  PostRoute.js  ProductRoute.js
model/recommender/: Artjuna.ipynb  README.md  pyproject.toml
model/recommender/dataloader/: dataloader.py
model/recommender/dummydata/: account_generator.py  follower_generator.py  has_seen_generator.py  product_generator.py
model/recommender/dummydata/location_data/: Bali.json  Bangka Belitung.json  Banten.json  Bengkulu.json  DI Yogyakarta.json  DKI Jakarta.json  Gorontalo.json  Jambi.json  Jawa Barat.json  Jawa Tengah.json  Jawa Timur.json  Kalimantan Barat.json  Kalimantan Selatan.json  Kalimantan Tengah.json  Kalimantan Timur.json  Kalimantan Utara.json  Kepulauan Riau.json  Lampung.json  Maluku Utara.json  Maluku.json  Nanggroe Aceh Darussalam (NAD).json  Nusa Tenggara Barat (NTB).json  Papua.json  (+11 more)
model/recommender/model/: basemodel.py
model/recommender/utils/: dictobject.py
model/style_transfer/: README.md  eval.py  pyproject.toml  requirements.txt  train.py
model/style_transfer/adain/: img_preprocess.py  model.py  pipeline.py
model/style_transfer/dataset_loader/: get_coco_dataset.py  get_voc_dataset.py  get_wikiart_dataset.md
model/style_transfer/saved_model/: saved_model.md
model/style_transfer/style_transfer_images/: README.md
model/style_transfer/utils/: config.py  dictobject.py
(+320 files in other folders)
