[tool.poetry]
name = "artjuna"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <83759122+ditw11mhs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
fastapi = "^0.78.0"
tensorflow = "^2.9.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
